Fix load more box/indicator being unaligned

--- a/src/app/styl/views/movie_browser/movie_list.styl
+++ b/src/app/styl/views/movie_browser/movie_list.styl
@@ -19,15 +19,6 @@
 		align-content: flex-start
 		align-items: flex-start
 		width: calc(100% - 5px)
-		
-		& > div
-			margin: 0 auto
-		
-		.item
-			width: 134px
-			&:empty
-				height: 0
-				margin: 0 10px
 
 	.error
 		font-size: 1.5em;
